# akiora

./: .env_example  .gitignore  README.md  docker-compose.yml  init-mongo-example.js
app/backend/ORM/: Dockerfile  db.py  db_clients.py  main.py  pyproject.toml  setup.py
app/backend/ORM/helpers/: CRUD_instances.py
app/backend/ORM/models/: CRUD.py  CustomBase.py  DataManager.py  Document.py
app/backend/ORM/models/data_managers/: DragonManager.py  MongoDocument.py  MongoManager.py  RedisCache.py
app/backend/ORM/models/user_service/: User.py  UserManager.py
app/backend/ORM/routers/user_service/: main.py  user.py
app/backend/ORM/schemas/user_service/: User.py  user.py  user_complex_fields.py
app/backend/data-layer-service/: Dockerfile  main.py  pyproject.toml  settings.py  setup.py
app/backend/data-layer-service/helpers/: CRUD_instances.py
app/backend/data-layer-service/models/: CRUD.py  DataManager.py
app/backend/data-layer-service/models/data_managers/: DragonManager.py  MongoManager.py
app/backend/data-layer-service/routers/user_service/: user.py
app/backend/shared/: pyproject.toml
app/backend/shared/src/shared/: __init__.py
app/backend/shared/src/shared/base/: Document.py
app/backend/shared/src/shared/user_service/models/: User.py
app/backend/shared/src/shared/user_service/schemas/: User.py
app/data-layer-service/: .dockerignore  pyproject.toml
app/data-layer-service/models/: DataManager.py  Document.py
app/data-layer-service/models/user_service/: User.py
