[project]
name = "shared"
version = "0.1.0"
description = "Shared utilities and models for Akiora services"
readme = "README.md"
authors = [
    { name = "orionSX", email = "asiskrich@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "motor>=3.7.1",
    "pydantic>=2.11.7",
]

[project.scripts]
shared = "shared:main"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
package-dir = "src"

[tool.uv.build]
package-dir = "src"
